Add vector column class to adjust align-self and text-align properties

--- a/client/src/Home.css
+++ b/client/src/Home.css
@@ -20,3 +20,8 @@
   border-color:dodgerblue;
   transition: all 400ms linear;
 }
+
+.vector-column {
+  align-self: flex-start;
+  text-align: center;
+}
