Edit bootstrap button class for background-color and border color

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,3 +4,8 @@ body {
   font-family: 'Cabin', sans-serif;
   background-color: aliceblue
 }
+
+.btn-primary {
+  background-color: #0C355C;
+  border-color: #0C355C;
+}
